@@ -59,7 +59,6 @@ import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -345,7 +344,7 @@ public class AclWorkflowIntegrationTestBuilder implements Builder<Runner> {
                 .collect(Collectors.toMap(udmUsageDto -> {
                     udmUsageDto.setStatus(UsageStatusEnum.ELIGIBLE);
                     return udmUsageDto;
-                }, udmUsageDto -> Collections.emptyList()));
+                }, udmUsageDto -> List.of()));
             udmUsageService.updateUsages(dtoToActionReasonsMap, false, "Reason");
             udmUsageService.publishUdmUsagesToBaseline(expectedUdmBatch.getPeriod());
         }
